# xkiro.rs

./: .gitignore  Cargo.toml  README.md  build.sh
admin-ui/src/: main.tsx
admin-ui/src/api/: credentials.ts
admin-ui/src/components/: balance-dialog.tsx  credential-card.tsx  dashboard.tsx  models-dialog.tsx  settings-dialog.tsx
admin-ui/src/components/ui/: tooltip.tsx
admin-ui/src/hooks/: use-credentials.ts  use-page-active.ts  use-privacy-mode.ts  use-runtime-stats.ts
admin-ui/src/lib/: storage.ts  utils.ts
admin-ui/src/types/: api.ts
src/: image.rs  main.rs  token.rs
src/admin/: handlers.rs  router.rs  service.rs  types.rs
src/anthropic/: bracket_tool_parser.rs  compressor.rs  converter.rs  handlers.rs  middleware.rs  mod.rs  prompt_filter.rs  router.rs  stream.rs  thinking_parser.rs  tool_compression.rs  truncation.rs  websearch.rs
src/common/: io.rs  mod.rs  redact.rs
src/kiro/: affinity.rs  mod.rs  models.rs  provider.rs  token_manager.rs
src/kiro/endpoint/: cli.rs  ide.rs  mod.rs
src/kiro/model/: usage_limits.rs
src/model/: config.rs  init.rs
src/openai/: converter.rs  handlers.rs  mod.rs  stream.rs  types.rs
