[package]
name = "xkiro-rs"
version = "2026.5.26"
edition = "2024"

[features]
default = ["native-tls"]
native-tls = ["reqwest/native-tls-vendored"]
# 打开后会输出请求体大小/截断后的请求体片段，用于排查上游错误。
# 默认关闭：避免日志中出现敏感内容（凭据、用户对话）。
sensitive-logs = []

[profile.release]
lto = true
strip = true

[dependencies]
axum = "0.8"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["stream", "json", "socks", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
http = "1.0"
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.10", features = ["v1", "v4", "fast-rng"] }
fastrand = "2"
sha2 = "0.10"
hex = "0.4"
crc = "3"           # CRC32C 计算
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "webp"] }
bytes = "1"         # 高效的字节缓冲区
tower-http = { version = "0.6", features = ["cors"] }
clap = { version = "4.5", features = ["derive"] }
urlencoding = "2"
parking_lot = "0.12"  # 高性能同步原语
subtle = "2.6"        # 常量时间比较（防止时序攻击）
rust-embed = "8"      # 嵌入静态文件
mime_guess = "2"      # MIME 类型推断
unicode-segmentation = "1.13"  # UAX #29 grapheme cluster 安全截断
serde_cbor = "0.11"   # CBOR 编解码（Web Portal API）
regex = "1"           # 系统提示清洗的正则规则
tiktoken-rs = "0.11"  # cl100k_base 精确 token 计数（precise_token_counting 开启时启用）
